<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Agregar">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbaragregarprod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimaryVariant"
                    app:title="@string/agregaprod"
                    app:menu="@menu/menu2"/>
            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivFotoprod"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/imagenprod"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/idprod"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idprod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/idprod"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/nombreprod"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombreprod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreprod"
                    tools:layout_editor_absoluteX="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/categoriaprod"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/categoriaprod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/categoriaprod"
                    tools:layout_editor_absoluteX="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/descripcionprod"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionprod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcionprod"
                    android:maxLines="5"
                    android:lines="1"
                    tools:layout_editor_absoluteX="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btntomarfoto"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/fotoprod"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/btnguardar"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/guardarprod"
                android:textSize="20sp"
               />
        </LinearLayout>
    </ScrollView>

</FrameLayout>